[gd_scene load_steps=4 format=3 uid="uid://dafnglul2wndr"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_tl1pp"]

[sub_resource type="LabelSettings" id="LabelSettings_hwlix"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_8xmnj"]
font_size = 48

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tl1pp")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 173.0
offset_bottom = 99.0
text = "Score:"
label_settings = SubResource("LabelSettings_hwlix")

[node name="RoundStatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 128.0
offset_bottom = 195.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_8xmnj")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Restart"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
